@@ -642,6 +642,26 @@ window.csSidebars = null;
 			popup.show();
 			popup.$().find( '#csb-name' ).focus();
 
+			/**
+			 * handle enter key on new sidebar name
+			 */
+			popup.$().on( 'keypress', '#csb-name', function(e) {
+				if ( 13 === e.keyCode ) {
+					if ( 0 < $(this).val().length ) {
+						$('#csb-description').focus();
+					}
+				}
+			});
+
+			/**
+			 * handle enter key on new sidebar description
+			 */
+			popup.$().on( 'keypress', '#csb-description', function(e) {
+				if ( 13 === e.keyCode ) {
+					popup.$('.btn-save').click();
+				}
+			});
+
 			// Add event hooks to the editor.
 			popup.$().on( 'click', '#csb-more', toggle_extras );
 			popup.$().on( 'click', '.btn-save', save_data );
